--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="main_tab_home">Головна</string>
     <string name="main_tab_my_kits">Мої набори</string>
     <string name="main_tab_all_kits">Усі набори</string>
+    <string name="main_loading">Завантаження…</string>
     <!-- /Main Activity -->
 
     <!-- Main Fragment -->
