add learning kits fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,11 @@
     <string name="kit_preview_progress_placeholder">%d/%d</string>
     <!-- /Word Kits Previews -->
 
+    <!-- Learning Kits Activity -->
+    <string name="kits_learning_not_learning">Не вивчається жоден набір 🥺\nДодайте набір із готових,\nабо ж створіть свій 👇</string>
+    <string name="kits_create_btn">Створити набір</string>
+    <!-- /Learning Kits Activity -->
+
     <string name="oauth_client_id">862495921780-q7he038d0dvi1vnj76cj6lmapi85s8ec.apps.googleusercontent.com</string>
 
 </resources>
